# src/main/kotlin/de/timbachmann/api/model/request/GenerateRequest.kt
@@ -1,0 +1,5 @@
+package de.timbachmann.api.model.request
+
+data class GenerateRequest (
+    val searchQuery: String,
+)
